cambio de lenguaje a espa;ol

--- a/apps/about.html
+++ b/apps/about.html
@@ -5,7 +5,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 <link rel="stylesheet" type="text/css" href="bootstrap.min.css">
-<title>Vulnerable Mama Shop - 易受攻击的妈妈商店</title>
+<title>TOCCO SHOP</title>
 </head>
 <body>
 
@@ -27,24 +27,24 @@
   
 <div class="jumbotron text-center">
 
-<h1 class="display-4">Vulnerable Mama Shop<br>
-<small>易受攻击的妈妈商店</small></h1>
+<h1 class="display-4">Tocco-loco<br>
+<small>TOCCO SHOP</small></h1>
 <hr class="my-4">
 
 <div class="container">
  <p class="lead text-left">
- A vulnerable php application for learning SQL injection. "Mama shop" is a term that means
- small convenience store in Singapore. Such small stores are common during the 70s to 90s and mainly cater to residents
- living near-by. Gradually as Singapore develops and big business chain enter the market, Mama shops start to disappear.  
+  332 / 5000
+  Una aplicación php vulnerable para aprender la inyección SQL. "Tocco shop" es un término que significa
+  pequeña tienda de conveniencia en la ciudad marravilla. Esta tienda inicio sus ventas online en la pandemia.
+  viviendo cerca. Poco a poco, a medida que Singapur se desarrolla y las grandes cadenas comerciales entran en el mercado, las tiendas Mama comienzan a desaparecer.  
  </p>
 
 <p class="lead text-left">
- This simple application is an online Mama Shop for practicing SQL injection. There is a vulnerability here. Can you find it ? 
+ Esta es una pagina con vulneravilidades SQL
 </p>
 
 <p class="text-left"> 
- 这是个有SQL注入漏洞的 php 应用程序。可用来学习SQL注入。 妈妈商店是新加坡的一个词汇，指邻家小商店。 70s 到 90s 年代有很多间。 但随着新加坡的发展， 大规模的连锁店进入市场， 妈妈商店渐渐消失。 这有个漏洞， 您可找到吗 ？
-</p>
+  Políticas de PrivacidadTérminos y condicionesContact Center: Oficina: 800-11-0202 | contacto@rosuma.com, Calle 7 # 7-16 Achumani.</p>
  
 </div> 
 <br><br><br>
