cambio de lenguaje a espa;ol

--- a/apps/about.html
+++ b/apps/about.html
@@ -50,7 +50,7 @@
 <br><br><br>
 <div class="container">
 <p class="text-center h5">
-© 2018 Ng Chiang Lin, 强林 <br>
+© 2021 Tocco <br>
 <a href="https://www.nighthour.sg" target="_blank">www.nighthour.sg</a>
 </p>
 </div>  
